fixing with because the contact form stretches everything out to 1065px

--- a/misc/subaru/whylegacy/style.css
+++ b/misc/subaru/whylegacy/style.css
@@ -15,7 +15,7 @@ font {
 
 
   .container {
-  width: 940px;
+  width: 1065px;
   background-color: #ffffff;
   color: #000000;
   padding: 0px;
